--- a/src/index.css
+++ b/src/index.css
@@ -3,66 +3,22 @@
 Variables
 ===============
 */
-:root {
-  /* dark shades of primary color*/
-  --clr-primary-1: #063251;
+/* :root { */
+/* dark shades of primary color*/
+/* --clr-primary-1: #063251;
   --clr-primary-2: #104e7a;
   --clr-primary-3: #1a6aa2;
-  --clr-primary-4: hsl(205, 63%, 48%);
-  /* primary/main color */
-  --clr-primary-5: #49a6e9;
-  /* lighter shades of primary color */
-  --clr-primary-6: hsl(205, 89%, 70%);
+  --clr-primary-4: hsl(205, 63%, 48%); */
+/* primary/main color */
+/* --clr-primary-5: #49a6e9; */
+/* lighter shades of primary color */
+/* --clr-primary-6: hsl(205, 89%, 70%);
   --clr-primary-7: #8bcbf9;
   --clr-primary-8: hsl(205, 86%, 81%);
   --clr-primary-9: hsl(205, 90%, 88%);
-  --clr-primary-10: hsl(205, 100%, 96%);
-  /* darkest grey - used for headings */
-  --clr-grey-1: #102a42;
-  --clr-grey-2: hsl(211, 39%, 23%);
-  --clr-grey-3: hsl(209, 34%, 30%);
-  --clr-grey-4: hsl(209, 28%, 39%);
-  /* grey used for paragraphs */
-  --clr-grey-5: hsl(210, 22%, 49%);
-  --clr-grey-6: hsl(209, 23%, 60%);
-  --clr-grey-7: hsl(211, 27%, 70%);
-  --clr-grey-8: hsl(210, 31%, 80%);
-  --clr-grey-9: hsl(212, 33%, 89%);
-  --clr-grey-10: hsl(210, 36%, 96%);
-  --clr-white: #fff;
-  --clr-red-dark: #bb2525;
-  --clr-red-light: hsl(360, 71%, 66%);
-  --clr-green-dark: hsl(125, 67%, 44%);
-  --clr-green-light: #6be675;
-  --clr-black: #222;
-  /* --ff-primary: 'Roboto', sans-serif;
-  --ff-secondary: 'Open Sans', sans-serif; */
-  --transition: all 0.15s linear;
-  --spacing: 0.1rem;
-  --radius: 0.25rem;
-  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  --max-width: 1170px;
-  --fixed-width: 620px;
-  --color: #3a1212;
-}
-
-/* :root {
-  /* dark shades of primary color*/
-/* --clr-primary-1: hsl(22, 28%, 21%);
-  --clr-primary-2: hsl(22, 28%, 29%);
-  --clr-primary-3: hsl(22, 28%, 37%);
-  --clr-primary-4: hsl(22, 28%, 45%); */
-/* primary/main color */
-/* --clr-primary-5: hsl(22, 31%, 52%); */
-/* lighter shades of primary color */
-/* --clr-primary-6: hsl(22, 31%, 60%);
-  --clr-primary-7: hsl(22, 31%, 67%);
-  --clr-primary-8: hsl(20, 31%, 74%);
-  --clr-primary-9: hsl(22, 31%, 81%);
-  --clr-primary-10: hsl(22, 31%, 88%); */
+  --clr-primary-10: hsl(205, 100%, 96%); */
 /* darkest grey - used for headings */
-/* --clr-grey-1: hsl(209, 61%, 16%);
+/* --clr-grey-1: #102a42;
   --clr-grey-2: hsl(211, 39%, 23%);
   --clr-grey-3: hsl(209, 34%, 30%);
   --clr-grey-4: hsl(209, 28%, 39%); */
@@ -74,10 +30,54 @@ Variables
   --clr-grey-9: hsl(212, 33%, 89%);
   --clr-grey-10: hsl(210, 36%, 96%);
   --clr-white: #fff;
-  --clr-red-dark: hsl(360, 67%, 44%);
+  --clr-red-dark: #bb2525;
   --clr-red-light: hsl(360, 71%, 66%);
   --clr-green-dark: hsl(125, 67%, 44%);
-  --clr-green-light: hsl(125, 71%, 66%);
+  --clr-green-light: #6be675;
+  --clr-black: #222; */
+/* --ff-primary: 'Roboto', sans-serif;
+  --ff-secondary: 'Open Sans', sans-serif; */
+/* --transition: all 0.15s linear;
+  --spacing: 0.1rem;
+  --radius: 0.25rem;
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  --max-width: 1170px;
+  --fixed-width: 620px;
+  --color: #3a1212;
+} */
+
+:root {
+  /* dark shades of primary color*/
+  --clr-primary-1: #001919;
+  --clr-primary-2: #004d4d;
+  --clr-primary-3: #008080;
+  --clr-primary-4: #00b3b3;
+  /* primary/main color  */
+  --clr-primary-5: #00ffff;
+  /* lighter shades of primary color  */
+  --clr-primary-6: #33ffff;
+  --clr-primary-7: #80ffff;
+  --clr-primary-8: #b3ffff;
+  --clr-primary-9: #ccffff;
+  --clr-primary-10: #e6ffff;
+  /* darkest grey - used for headings  */
+  --clr-grey-1: #1d2123;
+  --clr-grey-2: #2c3135;
+  --clr-grey-3: #3a4146;
+  --clr-grey-4: #495258;
+  /* grey used for paragraphs  */
+  --clr-grey-5: #83939e;
+  --clr-grey-6: #91a3b0;
+  --clr-grey-7: #9cacb8;
+  --clr-grey-8: #bdc8d0;
+  --clr-grey-9: #d3dadf;
+  --clr-grey-10: #e9edef;
+  --clr-white: #fff;
+  --clr-red-dark: #e65fa2;
+  --clr-red-light: #ffc3e1;
+  --clr-green-dark: #22990c;
+  --clr-green-light: #4dff2b;
   --clr-black: #222;
   --transition: all 0.3s linear;
   --spacing: 0.1rem;
@@ -85,8 +85,8 @@ Variables
   --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   --max-width: 1170px;
-  --fixed-width: 620px; */
-/* } */
+  --fixed-width: 620px;
+}
 
 /*
 =============== 
@@ -236,7 +236,7 @@ p {
 .title .underline {
   width: 6rem;
   height: 0.25rem;
-  background: #49a6e9;
+
   background: var(--clr-primary-5);
   margin-left: auto;
   margin-right: auto;
