--- a/src/index.css
+++ b/src/index.css
@@ -102,8 +102,7 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Baloo Bhaijaan 2', cursive;
   background: var(--clr-white);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -124,6 +123,7 @@ h2,
 h3,
 h4,
 h5 {
+  font-family: 'Righteous', cursive;
   letter-spacing: var(--spacing);
   text-transform: capitalize;
   line-height: 1.25;
@@ -148,6 +148,11 @@ p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-3);
 }
+
+button {
+  font-family: inherit;
+}
+
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 3rem;
